<resources>
    <string name="app_name">AdayoAvm</string>
    <string name="avm_setting_color">车身颜色</string>
    <string name="avm_setting_color_white">白</string>
    <string name="avm_setting_color_black">黑</string>
    <string name="avm_setting_color_gray">灰</string>
    <string name="avm_setting_color_pale_green">苍石绿</string>
    <string name="avm_setting_color_misty_blue">迷雾蓝</string>
    <string name="avm_setting_color_snow_white">雪域白</string>
    <string name="avm_setting_color_extreme_black">极夜黑</string>
    <string name="avm_setting_color_lapp_blue">拉普蓝</string>
    <string name="avm_setting_color_jungle_green">丛林绿</string>
    <string name="avm_setting_transparency">车模透明度</string>
    <string name="avm_setting_transparency_0">不透明</string>
    <string name="avm_setting_transparency_25">25%</string>
    <string name="avm_setting_transparency_50">50%</string>
    <string name="avm_setting_transparency_75">75%</string>
    <string name="avm_setting_line">辅助线样式</string>
    <string name="avm_setting_line_tyre">轮胎轨迹</string>
    <string name="avm_setting_line_body">车身轮廓</string>
    <string name="avm_setting_radar">雷达显示</string>
    <string name="avm_setting_radar_2d">2D</string>
    <string name="avm_setting_radar_3d">3D</string>
    <string name="avm_setting_brightness">亮度调节</string>
    <string name="avm_setting_radar_volume">雷达音量调节</string>
    <string name="avm_setting_radar_system">前雷达自动开启</string>
    <string name="avm_setting_trigger">智能触发切换</string>
    <string name="avm_setting_trigger_lamp">转向灯触发</string>
    <string name="avm_setting_trigger_radar">前雷达报警触发</string>
    <string name="avm_setting_radar_system_open">开启</string>
    <string name="avm_setting_radar_system_off">关闭</string>
    <string name="avm_hint_speed">车速大于30km/h，为了保证行车安全\n将退出全景影像系统</string>
    <string name="avm_hint_error">全景系统故障</string>
    <string name="avm_dialog_update_title">检测到系统可升级</string>
    <string name="avm_dialog_update_version">可升级版本： </string>
    <string name="avm_dialog_update_current_version">当前版本： </string>
    <string name="avm_dialog_update_button">升级</string>
    <string name="avm_dialog_update_cancel">取消</string>
    <string name="avm_dialog_update_confirm_title">升级确认</string>
    <string name="avm_dialog_update_confirm_content">升级将在倒计时结束后正式开始\n升级大约30分钟，期间车辆无法使用\n请选择合适安全场景下升级</string>
    <string name="avm_dialog_update_confirm_button">跳过</string>
    <string name="avm_dialog_update_confirm_cancel">取消升级</string>
    <string name="avm_dialog_update_failed_title">升级失败</string>
    <string name="avm_dialog_update_failed_content">即将重启为升级前的版本，若发现异常\n请联系4s店处理</string>
    <string name="avm_dialog_update_failed_button">立即重启 ( %d ) </string>
    <string name="avm_view_update_title">APA升级</string>
    <string name="avm_view_update_title_success">升级成功，10s 后即将重启为最新版本</string>
    <string name="avm_view_update_title_failed">升级失败，10s 后即将重启为升级前版本</string>
    <string name="avm_view_progress_0">0%</string>
    <string name="avm_view_progress_10">APA升级文件解压中</string>
    <string name="avm_view_progress_20">APA升级文件检验中</string>
    <string name="avm_view_progress_30">APA升级中</string>
    <string name="avm_view_progress_40">APA升级中</string>
    <string name="avm_view_progress_50">APA升级中</string>
    <string name="avm_view_progress_60">APA升级中</string>
    <string name="avm_view_progress_70">APA升级中</string>
    <string name="avm_view_progress_80">APA升级中</string>
    <string name="avm_view_progress_90">APA升级中</string>
    <string name="avm_view_progress_100">100%</string>
    <string name="avm_view_progress_mpu_over">100% MPU升级完成</string>
    <string name="avm_view_progress_mcu_updating">MCU升级中</string>
    <string name="avm_view_progress_mcu_over">MCU升级完成</string>
    <string name="avm_view_home_tips">当前操作无响应</string>
    <string name="avm_btn_exit">退出</string>
    <string name="avm_btn_2d_3d">2D/3D</string>
    <string name="avm_btn_transparent_chassis">透明底盘</string>
    <string name="avm_btn_more_views">更多视角</string>
    <string name="avm_btn_track">循迹倒车</string>
    <string name="avm_btn_setting">设置</string>
    <string name="avm_btn_rock">岩石模式</string>
    <string name="avm_btn_walk">蠕行模式</string>
    <string name="track_control_hint">请松开制动踏板\n双手离开方向盘</string>
    <string name="track_success">已到达目的地，请接管车辆</string>
    <string name="track_dialog_title_pause">倒车循迹暂停</string>
    <string name="track_dialog_content_pause_1">请系好安全带</string>
    <string name="track_dialog_content_pause_2">请关闭后备箱/车门</string>
    <string name="track_dialog_content_pause_3">探测到障碍物</string>
    <string name="track_dialog_title_stop">倒车循迹终止</string>
    <string name="track_dialog_content_stop_1">关联控制器不支持\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_2">关联系统故障\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_3">当前处于非正常模式\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_4">主动刹车系统失效\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_5">挡位无法正常切换\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_6">差速锁锁死\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_7">四驱系统开启/4L启动\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_8">电子驻车系统开启\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_9">关联或干涉系统工作中\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_10">倒车循迹过程中\nTCU超过2s未响应，系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_11">后视镜折叠\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_12">踩油门踏板\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_13">人为干预方向盘\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_14">车速超限\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_15">轨迹超出规划\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_16">倒车循迹超时\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_17">倒车循迹中断次数超限\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_18">驾驶员刹车时间超过60s\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_19">周边有障碍物且超过60s\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_20">用户超过60s未响应\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_21">坡度超限\n系统退出，请接管车辆</string>
    <string name="track_dialog_content_stop_22">人为干预档位\n系统退出，请接管车辆</string>
    <string name="track_dialog_title_recover">倒车循迹恢复</string>
    <string name="track_dialog_content_recover">请确定是否继续倒车循迹</string>
    <string name="track_distance">%s 米</string>
    <string name="apa_btn_berth_in">自动泊入</string>
    <string name="apa_btn_berth_out">自动泊出</string>
    <string name="apa_btn_custom_space">自选车位</string>
    <string name="apa_btn_setting">设置</string>
    <string name="apa_search_space">向前行驶搜索车位</string>
    <string name="apa_dialog_exit_title">泊车退出</string>
    <string name="apa_dialog_exit_content">请确定是否退出泊车</string>
    <string name="apa_dialog_exit_positive">确定</string>
    <string name="apa_dialog_exit_negative">取消 ( %d s ) </string>
    <string name="apa_seed_30">车速过高将退出自动泊车功能</string>
    <string name="apa_seed_25">车速过快无法使用泊车功能</string>
    <string name="apa_find_space">找到车位，请停车</string>
    <string name="apa_search_space_with_D">请挂D档搜索车位</string>
    <string name="apa_dialog_title_door_open">车门打开，请关闭</string>
    <string name="apa_dialog_content_door_open">车门或后备箱打开\n会影响搜索的精确性以及泊车效果</string>
    <string name="apa_select_berth_in_type">请确认停车位，并选择泊入方式</string>
    <string name="apa_select_berth_in_type_vertical">请确认停车位置，并选择泊入方向</string>
    <string name="apa_select_berth_in_type_vertical_title">确认后请选择泊入方式</string>
    <string name="apa_select_berth_in_type_vertical_front_parking">车头泊入</string>
    <string name="apa_select_berth_in_type_vertical_rear_parking">车尾泊入</string>
    <string name="apa_berth_in_type_key">一键泊入</string>
    <string name="apa_berth_in_type_remote">遥控泊入</string>
    <string name="apa_berth_in_control_hint">请松开制动踏板\n双手离开方向盘</string>
    <string name="apa_berth_in_success">泊入完成，请接管车辆</string>
    <string name="apa_berth_out_no_space">空间不足，无法泊出\n泊车系统退出</string>
    <string name="apa_berth_out_orientation">请注意周围环境\n选择泊出方向</string>
    <string name="apa_berth_out_control_hint">请松开制动踏板\n双手离开方向盘</string>
    <string name="apa_berth_out_success">泊出完成，请接管车辆</string>
    <string name="apa_setting_title">停车偏好选择</string>
    <string name="apa_setting_right_hint">&#160;*&#160;停车后左侧预留\n &#160;&#160;&#160;较大空间方便驾\n &#160;&#160;&#160;驶员上下车</string>
    <string name="apa_setting_right">靠右</string>
    <string name="apa_setting_center">居中</string>
    <string name="apa_dialog_title_pause">泊车暂停</string>
    <string name="apa_dialog_content_pause_1">请系好安全带</string>
    <string name="apa_dialog_content_pause_2">请关闭后备箱/车门</string>
    <string name="apa_dialog_content_pause_3">探测到障碍物</string>
    <string name="apa_dialog_content_pause_4">手机端已暂停</string>
    <string name="apa_dialog_content_pause_5">暂停恢复</string>
    <string name="apa_dialog_content_pause_6">退出确认</string>
    <string name="apa_dialog_title_stop">泊车终止</string>
    <string name="apa_dialog_content_stop_1">关联控制器不支持\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_2">关联系统故障\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_3">当前处于非正常模式\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_4">主动刹车系统失效\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_5">挡位无法正常切换\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_6">差速锁锁死\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_7">四驱系统开启\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_8">电子驻车系统开启\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_9">关联或干涉系统工作中\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_10">手机连接异常/蓝牙信号丢失\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_11">泊车过程中\nTCU超过2s未响应，系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_12">后视镜折叠\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_13">踩油门踏板\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_14">人为干预方向盘\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_15">手机端已终止泊车\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_16">车速超限\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_17">轨迹超出规划\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_18">车位空间限制\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_19">泊车超时\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_20">泊车次数超限\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_21">泊车中断次数超限\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_22">驾驶员刹车时间超过60s\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_23">周边有障碍物且超过60s\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_24">用户超过60s未响应\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_25">遥控泊车握手超时\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_26">用户操作超时\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_27">坡度超限\n系统退出，请接管车辆</string>
    <string name="apa_dialog_content_stop_28">人为干预档位\n系统退出，请接管车辆</string>
    <string name="apa_dialog_title_recover">泊车恢复</string>
    <string name="apa_dialog_content_recover">请确定是否继续泊车</string>
    <string name="apa_remote_control_hint">请挂P挡，下车后打开手机APP\n开始遥控泊车</string>
    <string name="apa_custom_parking_start_hint_title">用户作为自动泊车操作第一责任人，请确保选定车位的安全性和可用性，并关注周边环境，随时准备接管车辆。</string>
    <string name="apa_custom_parking_start_hint_double_click">双击</string>
    <string name="apa_custom_parking_start_hint_double_click_content">切换车位方向</string>
    <string name="apa_custom_parking_start_hint_drag">拖动</string>
    <string name="apa_custom_parking_start_hint_drag_content">选择停车位置</string>
    <string name="apa_custom_parking_start_hint_control">控制</string>
    <string name="apa_custom_parking_start_hint_control_content">可微调角度</string>
    <string name="upgrade_exit">退出</string>
    <string name="avm_box_no_respond">全景系统无响应</string>
</resources>